--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@
 										<article>
 											<span class="icon solid fa-tasks"></span>
 											<div class="content">
-												<h3><a href="tasks.html">Tasks & Subtasks</a></h3>
+												<h3><a href="tasks.html">Subtasks</a></h3>
 												<p>Learn about polarization detection, type classification, and manifestation identification across 22 languages.</p>
 											</div>
 										</article>
@@ -121,7 +121,7 @@
 									</header>
 									<ul>
 										<li><a href="/">Homepage</a></li>
-										<li><a href="tasks.html">Tasks & Subtasks</a></li>
+										<li><a href="tasks.html">Subtasks</a></li>
 										<li><a href="participation.html">How to Participate</a></li>
 										<li><a href="faq.html">FAQs</a></li>
 										<li><a href="dates.html">Important Dates</a></li>
