--- a/announcements/evaluation-period-begins.html
+++ b/announcements/evaluation-period-begins.html
@@ -123,7 +123,7 @@
 									</header>
 									<ul>
 										<li><a href="../">Homepage</a></li>
-										<li><a href="../tasks.html">Tasks & Subtasks</a></li>
+										<li><a href="../tasks.html">Subtasks</a></li>
 										<li><a href="../participation.html">How to Participate</a></li>
 										<li><a href="../faq.html">FAQs</a></li>
 										<li><a href="../dates.html">Important Dates</a></li>
