--- a/tasks.html
+++ b/tasks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Tasks & Subtasks - POLAR @ SemEval-2026</title>
+		<title>Subtasks - POLAR @ SemEval-2026</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,7 +28,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Tasks & Subtasks</h1>
+										<h1>Subtasks</h1>
 									</header>
 
 									<p>Participants may choose to compete in one or more of the three subtasks. A few sample instances are provided here for review, and additional trial data can be found at: <strong><a href="https://github.com/Polar-SemEval/trial-data" target="_blank">Trial Data</a></strong></p>
@@ -42,41 +42,34 @@
 										<table>
 											<thead>
 												<tr>
-													<th>Text</th>
-													<th>Lang</th>
-													<th>Polarization</th>
+													<th>text</th>
+													<th>polarization</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
 													<td>Find yourself a west bank settler gf</td>
-													<td>en</td>
-													<td>TRUE</td>
+													<td>1</td>
 												</tr>
 												<tr>
 													<td>Fascist oligarchs now control the USA</td>
-													<td>en</td>
-													<td>TRUE</td>
+													<td>1</td>
 												</tr>
 												<tr>
 													<td>Someone end this lunatic before he starts ethnic cleansing</td>
-													<td>en</td>
-													<td>TRUE</td>
+													<td>1</td>
 												</tr>
 												<tr>
 													<td>The EU is increasing military aid to Ukraine to one billion euros the press release on the website of the Council of Europe.</td>
-													<td>en</td>
-													<td>FALSE</td>
+													<td>0</td>
 												</tr>
 												<tr>
 													<td>House drafts bill to strike Iran proxies amid IsraelHamas</td>
-													<td>en</td>
-													<td>FALSE</td>
+													<td>0</td>
 												</tr>
 												<tr>
 													<td>Contested races across county early voting</td>
-													<td>en</td>
-													<td>FALSE</td>
+													<td>0</td>
 												</tr>
 											</tbody>
 										</table>
@@ -94,48 +87,47 @@
 									<div class="table-wrapper">
 										<table>
 											<thead>
-												<tr>
-													<th>Text</th>
-													<th>Lang</th>
-													<th>Gender/Sexual</th>
-													<th>Political</th>
-													<th>Religious</th>
-													<th>Racial/Ethnic</th>
-													<th>Other</th>
-												</tr>
+											  <tr>
+												<th>text</th>
+												<th>political</th>
+												<th>racial/ethnic</th>
+												<th>religious</th>
+												<th>gender/sexual</th>
+												<th>other</th>
+											  </tr>
 											</thead>
 											<tbody>
-												<tr>
-													<td>Find yourself a west bank settler gf</td>
-													<td>en</td>
-													<td>1</td>
-													<td>1</td>
-													<td>0</td>
-													<td>0</td>
-													<td>0</td>
-												</tr>
-												<tr>
-													<td>Fascist oligarchs now control the USA</td>
-													<td>en</td>
-													<td>0</td>
-													<td>1</td>
-													<td>0</td>
-													<td>0</td>
-													<td>0</td>
-												</tr>
-												<tr>
-													<td>Someone end this lunatic before he starts ethnic cleansing</td>
-													<td>en</td>
-													<td>0</td>
-													<td>1</td>
-													<td>0</td>
-													<td>1</td>
-													<td>0</td>
-												</tr>
+											  <tr>
+												<td>Find yourself a west bank settler gf</td>
+												<td>1</td>
+												<td>0</td>
+												<td>0</td>
+												<td>1</td>
+												<td>0</td>
+											  </tr>
+											  <tr>
+												<td>Fascist oligarchs now control the USA</td>
+												<td>1</td>
+												<td>0</td>
+												<td>0</td>
+												<td>0</td>
+												<td>0</td>
+											  </tr>
+											  <tr>
+												<td>Someone end this lunatic before he starts ethnic cleansing</td>
+												<td>1</td>
+												<td>1</td>
+												<td>0</td>
+												<td>0</td>
+												<td>0</td>
+											  </tr>
 											</tbody>
-										</table>
+										  </table>
 									</div>
 
+									<ul class="actions">
+										<li><a href="#" class="button big" target="_blank">Go to Subtask-2 Competition (To Be Announced)</a></li>
+									</ul>
 									<hr class="major" />
 
 									<h2>Subtask 3: Manifestation Identification</h2>
@@ -144,52 +136,51 @@
 									<div class="table-wrapper">
 										<table>
 											<thead>
-												<tr>
-													<th>Text</th>
-													<th>Lang</th>
-													<th>Vilification</th>
-													<th>Extreme Language</th>
-													<th>Stereotype</th>
-													<th>Invalidation</th>
-													<th>Lack of Empathy</th>
-													<th>Dehumanization</th>
-												</tr>
+											  <tr>
+												<th>text</th>
+												<th>stereotype</th>
+												<th>vilification</th>
+												<th>dehumanization</th>
+												<th>extreme_language</th>
+												<th>lack_of_empathy</th>
+												<th>invalidation</th>
+											  </tr>
 											</thead>
 											<tbody>
-												<tr>
-													<td>Find yourself a west bank settler gf</td>
-													<td>en</td>
-													<td>1</td>
-													<td>0</td>
-													<td>1</td>
-													<td>0</td>
-													<td>0</td>
-													<td>0</td>
-												</tr>
-												<tr>
-													<td>Fascist oligarchs now control the USA</td>
-													<td>en</td>
-													<td>1</td>
-													<td>1</td>
-													<td>0</td>
-													<td>0</td>
-													<td>0</td>
-													<td>0</td>
-												</tr>
-												<tr>
-													<td>Someone end this lunatic before he starts ethnic cleansing</td>
-													<td>en</td>
-													<td>1</td>
-													<td>1</td>
-													<td>1</td>
-													<td>0</td>
-													<td>0</td>
-													<td>0</td>
-												</tr>
+											  <tr>
+												<td>Find yourself a west bank settler gf</td>
+												<td>1</td>
+												<td>1</td>
+												<td>0</td>
+												<td>0</td>
+												<td>0</td>
+												<td>0</td>
+											  </tr>
+											  <tr>
+												<td>Fascist oligarchs now control the USA</td>
+												<td>0</td>
+												<td>1</td>
+												<td>0</td>
+												<td>1</td>
+												<td>0</td>
+												<td>0</td>
+											  </tr>
+											  <tr>
+												<td>Someone end this lunatic before he starts ethnic cleansing</td>
+												<td>1</td>
+												<td>1</td>
+												<td>0</td>
+												<td>1</td>
+												<td>0</td>
+												<td>0</td>
+											  </tr>
 											</tbody>
-										</table>
-									</div>
+										  </table>										  
+										</div>
 
+										<ul class="actions">
+											<li><a href="#" class="button big" target="_blank">Go to Subtask-3 Competition (To Be Announced)</a></li>
+										</ul>
 									<hr class="major" />
 
 									<h2>Languages Covered</h2>
@@ -249,7 +240,7 @@
 									</header>
 									<ul>
 										<li><a href="/">Homepage</a></li>
-										<li><a href="tasks.html">Tasks & Subtasks</a></li>
+										<li><a href="tasks.html">Subtasks</a></li>
 										<li><a href="participation.html">How to Participate</a></li>
 										<li><a href="faq.html">FAQs</a></li>
 										<li><a href="dates.html">Important Dates</a></li>
