--- a/organizers.html
+++ b/organizers.html
@@ -214,7 +214,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="tasks.html">Tasks & Subtasks</a></li>
+										<li><a href="tasks.html">Subtasks</a></li>
 										<li><a href="participation.html">How to Participate</a></li>
 										<li><a href="faq.html">FAQs</a></li>
 										<li><a href="dates.html">Important Dates</a></li>
