--- a/tasks.html
+++ b/tasks.html
@@ -89,7 +89,7 @@
 									<hr class="major" />
 
 									<h2>Subtask 2: Polarization Type Classification</h2>
-									<p><strong>Multi-label classification</strong> to identify the target of polarization as one of the following categories: Gender/Sexual, Political, Religious, Racial/Ethnic, or Other.</p>
+									<p><strong>Multi-label classification</strong> to identify the target of polarization as one of the following categories: political, racial/ethnic, religious, gender/sexual or other.</p>
 
 									<div class="table-wrapper">
 										<table>
@@ -142,7 +142,7 @@
 									<hr class="major" />
 
 									<h2>Subtask 3: Manifestation Identification</h2>
-									<p><strong>Multi-label classification</strong> to classify how polarization is expressed, with multiple possible labels including Vilification, Extreme Language, Stereotype, Invalidation, Lack of Empathy, and Dehumanization.</p>
+									<p><strong>Multi-label classification</strong> to classify how polarization is expressed, with multiple possible labels including stereotype, vilification, dehumanization, extreme_language, lack_of_empathy", or invalidation.</p>
 
 									<div class="table-wrapper">
 										<table>
