--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 										<p>Polarization is the sharp division of opinions into opposing groups, often with hostility and exclusion. This shared task seeks to advance understanding of how polarization appears in text across languages, cultures, and events. Participants will develop models to detect and interpret polarized content from contexts like elections, conflicts, protests, and debates.</p>
 										<ul class="actions">
 											<li><a href="tasks.html" class="button big">View Tasks</a></li>
-											<li><a href="https://www.codabench.org/competitions/10522/" class="button big" target="_blank">Codabench Subtask 1</a></li>
-											<li><a href="#" class="button big" target="_blank">Codabench Subtask 2</a></li>
-											<li><a href="#" class="button big" target="_blank">Codabench Subtask 3</a></li>
+											<li><a href="https://www.codabench.org/competitions/10552" class="button big" target="_blank">Codabench Subtask 1</a></li>
+											<li><a href="https://www.codabench.org/competitions/10669" class="button big" target="_blank">Codabench Subtask 2</a></li>
+											<li><a href="https://www.codabench.org/competitions/10674" class="button big" target="_blank">Codabench Subtask 3</a></li>
 
 										</ul>
 									</div>
