--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			.actions-column {
+				display: flex;
+				flex-direction: column;
+				gap: 10px; /* space between buttons */
+				align-items: flex-start; /* or center if you want them centered */
+				}
+
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -34,13 +43,13 @@
 											<p>Detecting Multilingual, Multicultural and Multievent Online Polarization</p>
 										</header>
 										<p>Polarization is the sharp division of opinions into opposing groups, often with hostility and exclusion. This shared task seeks to advance understanding of how polarization appears in text across languages, cultures, and events. Participants will develop models to detect and interpret polarized content from contexts like elections, conflicts, protests, and debates.</p>
-										<ul class="actions">
+										<ul class="actions actions-column">
 											<li><a href="tasks.html" class="button big">View Tasks</a></li>
 											<li><a href="https://www.codabench.org/competitions/10552" class="button big" target="_blank">Codabench Subtask 1</a></li>
 											<li><a href="https://www.codabench.org/competitions/10669" class="button big" target="_blank">Codabench Subtask 2</a></li>
 											<li><a href="https://www.codabench.org/competitions/10674" class="button big" target="_blank">Codabench Subtask 3</a></li>
-
-										</ul>
+										  </ul>
+										  
 									</div>
 									<span class="image object">
 										<img src="assets/POLAR.png" alt="POLAR Task Banner" />
