--- a/index.html
+++ b/index.html
@@ -13,36 +13,11 @@
 				align-items: flex-start; /* or center if you want them centered */
 			}
 
-			/* Base image fix */
-			#banner .image.object {
-			max-width: 350px;  /* control size on big screens */
-			margin: 0 auto;    /* center if it stacks */
+			img {
+				max-width: 100%;
+				height: auto;
+				object-fit: contain; /* keeps proportions */
 			}
-
-			#banner .image.object img {
-			width: 100%;
-			height: auto;
-			display: block;
-			object-fit: contain;
-			}
-
-			/* Responsive adjustment */
-			@media screen and (max-width: 900px) {
-			#banner {
-				flex-direction: column;
-				text-align: center;
-			}
-
-			#banner .content {
-				order: 1;
-			}
-
-			#banner .image.object {
-				order: 2;
-				max-width: 250px;  /* shrink on smaller screens */
-			}
-			}
-
 
 
 
