--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 				align-items: flex-start; /* or center if you want them centered */
 			}
 
+			#banner .image.object img {
+				max-width: 100%;
+				height: auto;
+			}
 
 
 
