--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			}
 
 			#banner .image.object img {
-				max-width: 100%;
 				height: auto;
+				object-fit: contain; /* keeps proportions */
 			}
 
 
