--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			}
 
 			#banner .image.object img {
+				max-width: auto;
 				height: auto;
 				object-fit: contain; /* keeps proportions */
 			}
