--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 				gap: 10px; /* space between buttons */
 				align-items: flex-start; /* or center if you want them centered */
 			}
+			#banner .image.object img {
+				width: 80%;   /* 100% - 20% = shrink by 20% */
+				height: auto; /* keep proportions */
+				display: block;
+				margin: 0 auto; /* center it */
+				}
+
 
 
 
