--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 				align-items: flex-start; /* or center if you want them centered */
 			}
 			#banner .image.object img {
-				width: 80%;   /* 100% - 20% = shrink by 20% */
-				height: auto; /* keep proportions */
-				display: block;
-				margin: 0 auto; /* center it */
+				width: 80%;     /* reduce size by 20% */
+				height: auto;   /* keep proportions */
+				display: block; /* avoid inline spacing issues */
+				margin: 0 auto; /* center the image */
 				}
+
 
 
 
