--- a/announcements/compitition-begins.html
+++ b/announcements/compitition-begins.html
@@ -29,20 +29,26 @@
 							<!--1-->
 								<section>
 									<header class="main">
-										<h1>Evaluation Period Now Open - Submit Your Final Models</h1>
+										<h1>The competition websites for Subtask 1, Subtask 2, and Subtask 3 are now live.</h1>
 										<p>Posted on August 31, 2025 at 14:30 UTC</p>
 									</header>
 
-									<p>The official evaluation period for POLAR @ SemEval-2026 Task 9 has now begun! We're excited to see the innovative approaches our participants have developed over the past months.</p>
-
+									<p>The official Competition for POLAR @ SemEval-2026 Task 9 has now begun! We're excited to see the innovative participants join us.</p>
+									<p>
+										The competition websites for Subtask 1 ( <a href="https://www.codabench.org/competitions/10552"></a> ), Subtask 2 ( <a href="https://www.codabench.org/competitions/10669"></a> ) and Subtask 3 ( <a href="https://www.codabench.org/competitions/10674"></a> ) are now live. 
+										We have released the training and development datasets for the following languages: Amharic (amh), Arabic (arb), English (eng), Spanish (spa), Urdu (urd), and Chinese (zho). 
+										More languages are on the way, and we will share announcements as soon as they are released.
+									</p>
+									
 									<h2>Key Information for Participants</h2>
+
 
 									<h3>Submission Guidelines</h3>
 									<ul>
-										<li><strong>Submission Limit:</strong> Each team can make up to 3 submissions per subtask</li>
+										<!-- <li><strong>Submission Limit:</strong> Each team can make up to 3 submissions per subtask</li> -->
 										<li><strong>Final Submission:</strong> Only your last submission will be considered for official ranking</li>
 										<li><strong>Platform:</strong> All submissions must be made through the CodaBench platform</li>
-										<li><strong>Deadline:</strong> February 1, 2026 at 23:59 AoE (Anywhere on Earth)</li>
+										<li><strong>Deadline:</strong> January 9, 2026 at 23:59 AoE (Anywhere on Earth)</li>
 									</ul>
 
 									<h3>What to Submit</h3>
