--- a/announcements/compitition-begins.html
+++ b/announcements/compitition-begins.html
@@ -35,11 +35,16 @@
 
 									<p>The official Competition for POLAR @ SemEval-2026 Task 9 has now begun! We're excited to see the innovative participants join us.</p>
 									<p>
-										The competition websites for Subtask 1 ( <a href="https://www.codabench.org/competitions/10552"></a> ), Subtask 2 ( <a href="https://www.codabench.org/competitions/10669"></a> ) and Subtask 3 ( <a href="https://www.codabench.org/competitions/10674"></a> ) are now live. 
-										We have released the training and development datasets for the following languages: Amharic (amh), Arabic (arb), English (eng), Spanish (spa), Urdu (urd), and Chinese (zho). 
+										The competition websites for 
+										<a href="https://www.codabench.org/competitions/10552">Subtask 1</a>, 
+										<a href="https://www.codabench.org/competitions/10669">Subtask 2</a>, 
+										and <a href="https://www.codabench.org/competitions/10674">Subtask 3</a> 
+										are now live. 
+										We have released the training and development datasets for the following languages: 
+										Amharic (amh), Arabic (arb), English (eng), Spanish (spa), Urdu (urd), and Chinese (zho). 
 										More languages are on the way, and we will share announcements as soon as they are released.
 									</p>
-									
+									  
 									<h2>Key Information for Participants</h2>
 
 
