--- a/announcements/compitition-begins.html
+++ b/announcements/compitition-begins.html
@@ -36,7 +36,7 @@
 									<p>The official Competition for POLAR @ SemEval-2026 Task 9 has now begun! We're excited to see the innovative participants join us.</p>
 									<p>
 										The competition websites for 
-										<a href="https://www.codabench.org/competitions/10552" target="_blank" rel="noopener noreferrer">Subtask 1</a>, 
+										<a href="https://www.codabench.org/competitions/10522/" target="_blank" rel="noopener noreferrer">Subtask 1</a>, 
 										<a href="https://www.codabench.org/competitions/10669" target="_blank" rel="noopener noreferrer">Subtask 2</a>, 
 										and <a href="https://www.codabench.org/competitions/10674" target="_blank" rel="noopener noreferrer">Subtask 3</a> 
 										are now live. 
@@ -46,7 +46,6 @@
 									</p>									  
 									  
 									<h2>Key Information for Participants</h2>
-
 
 									<h3>Submission Guidelines</h3>
 									<ul>
