--- a/tasks.html
+++ b/tasks.html
@@ -83,7 +83,7 @@
 									</div>
 
 									<ul class="actions">
-										<li><a href="https://www.codabench.org/competitions/10522/" class="button big" target="_blank">Go to Subtask-1 Competition</a></li>
+										<li><a href="https://www.codabench.org/competitions/10522" class="button big" target="_blank">Go to Subtask-1 Competition</a></li>
 									</ul>
 
 									<hr class="major" />
