--- a/index.html
+++ b/index.html
@@ -78,27 +78,27 @@
 											<span class="icon solid fa-comments"></span>
 											<div class="content">
 												<h3>21 Languages</h3>
-												<p>German,
-													Spanish,
-													English,
+												<p>Amharic,
 													Arabic,
-													Hausa,
-													Urdu,
-													Amharic,
-													Italian,
-													Russian,
-													Myanmar,
+													Bengali,
+													Burmese,
 													Chinese,
-													Nepalish,
+													English,
+													German,
+													Italian,
+													Hausa,
 													Hindi,
-													Telugu,
-													Persian,
-													Turkish,
-													Bangladish,
 													Khmer,
+													Nepali,
 													Odia,
+													Persian,
 													Punjabi,
-													Swahili.</p>
+													Russian,
+													Spanish,
+													Swahili,
+													Telugu,
+													Turkish,
+													Urdu.</p>
 											</div>
 										</article>
 										<article>
