--- a/tasks.html
+++ b/tasks.html
@@ -137,7 +137,7 @@
 									</div>
 
 									<ul class="actions">
-										<li><a href="#" class="button big" target="_blank">Go to Subtask-2 Competition (To Be Announced)</a></li>
+										<li><a href="https://www.codabench.org/competitions/10669/" class="button big" target="_blank">Go to Subtask-2 Competition</a></li>
 									</ul>
 									<hr class="major" />
 
@@ -194,7 +194,7 @@
 										</div>
 
 										<ul class="actions">
-											<li><a href="#" class="button big" target="_blank">Go to Subtask-3 Competition (To Be Announced)</a></li>
+											<li><a href="https://www.codabench.org/competitions/10674/" class="button big" target="_blank">Go to Subtask-3 Competition</a></li>
 										</ul>
 									<hr class="major" />
 
