--- a/announcements/compitition-begins.html
+++ b/announcements/compitition-begins.html
@@ -30,7 +30,7 @@
 								<section>
 									<header class="main">
 										<h1>The competition websites for Subtask 1, Subtask 2, and Subtask 3 are now live.</h1>
-										<p>Posted on August 31, 2025 at 14:30 UTC</p>
+										<p>Posted on September 22, 2025 at 14:30 UTC</p>
 									</header>
 
 									<p>The official Competition for POLAR @ SemEval-2026 Task 9 has now begun! We're excited to see the innovative participants join us.</p>
@@ -104,8 +104,8 @@
 								<!--2-->
 								<section>
 									<header class="main">
-										<h1>Train Data Release Soon - Stay Tuned!</h1>
-										<p>Posted on September 3, 2025 at 16:45 UTC</p>
+										<h1>More Languages Will Be Releases Soon - Stay Tuned!</h1>
+										<p>Posted on September 22, 2025 at 14:30 UTC</p>
 									</header>
 
 									<p>We are pleased to announce that the training dataset will be released shortly.
