--- a/announcements/data-released-new.html
+++ b/announcements/data-released-new.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>New Data Release - POLAR @ SemEval-2026</title>
+		<title>Data Released - POLAR @ SemEval-2026</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -29,15 +29,17 @@
 							<!--1-->
 								<section>
 									<header class="main">
-										<h1>The data for six languages in Subtask 1 are now live.</h1>
-										<p>Posted on September 12, 2025 at 16:45 UTC</p>
+										<h1>Data Release Update - Subtasks 1, 2 & 3 Available in 6 Languages!</h1>
+										<p>Posted on September 20, 2025 at 18:00 UTC</p>
 									</header>
 
 									<p>We have released the training and development datasets for six languages for Subtask-1: Amharic (amh), Arabic (arb), Chinese (zho), English (eng), Spanish (spa), and Urdu (urd). More languages are on the way, and we’ll be updating the website with release information over the next few days.</p>
 									<p>
-										The competition website for 
+										The competition websites for 
 										<a href="https://www.codabench.org/competitions/10522/" target="_blank" rel="noopener noreferrer">Subtask 1</a>, 
-										is now live. 
+										<a href="https://www.codabench.org/competitions/10669" target="_blank" rel="noopener noreferrer">Subtask 2</a>, 
+										and <a href="https://www.codabench.org/competitions/10674" target="_blank" rel="noopener noreferrer">Subtask 3</a> 
+										are now live. 
 										We have released the training and development datasets for the following languages: 
 										Amharic (amh), Arabic (arb), Chinese (zho), English (eng), Spanish (spa), and Urdu (urd). 
 										More languages are on the way, and we will share announcements as soon as they are released.
@@ -103,7 +105,7 @@
 								<section>
 									<header class="main">
 										<h1>Other Languages' Data Release Soon - Stay Tuned!</h1>
-										<p>Posted on September 12, 2025 at 16:45 UTC</p>
+										<p>Posted on September 20, 2025 at 18:00 UTC</p>
 									</header>
 
 									<p>We are pleased to announce that the training dataset will be released shortly.
