--- a/announcements/compitition-begins.html
+++ b/announcements/compitition-begins.html
@@ -37,7 +37,7 @@
 									<p>
 										The competition websites for 
 										<a href="https://www.codabench.org/competitions/10522/" target="_blank" rel="noopener noreferrer">Subtask 1</a>, 
-										<a href="https://www.codabench.org/competitions/10669" target="_blank" rel="noopener noreferrer">Subtask 2</a>, 
+										<a href="https://www.codabench.org/competitions/10669" target="_blank" rel="noopener noreferrer">Subtask 2</a>
 										and <a href="https://www.codabench.org/competitions/10674" target="_blank" rel="noopener noreferrer">Subtask 3</a> 
 										are now live. 
 										We have released the training and development datasets for the following languages: 
