--- a/faq.html
+++ b/faq.html
@@ -33,7 +33,7 @@
 
 									<h2>Participation Questions</h2>
 
-									<h3>Do I have to participate in all languages for a given track?</h3>
+									<h3>Do I have to participate in all languages for a given subtask?</h3>
 									<p>No. You may choose one or more languages.</p>
 
 									<h3>How will you verify my submitted model?</h3>
