--- a/tasks.html
+++ b/tasks.html
@@ -31,7 +31,41 @@
 										<h1>Subtasks</h1>
 									</header>
 
-									<p>Participants may choose to compete in one or more of the three subtasks. A few sample instances are provided here for review, and additional trial data can be found at: <strong><a href="https://github.com/Polar-SemEval/trial-data" target="_blank">Trial Data</a></strong></p>
+									<p>Participants may choose to compete in one or more of the three subtasks.</p>
+
+									<h2>Dataset Information</h2>
+									<p>Data sources include news websites, Reddit, blogs, Bluesky, and regional forums, covering events such as elections, conflicts, gender rights, migration, and more. Each language contains 3,000–5,000 annotated instances.</p>
+									
+									<p><strong>Download Links:</strong></p>
+									<ul>
+										<li><a href="https://github.com/Polar-SemEval/trial-data" target="_blank">Trial Data Repository</a></li>
+									</ul>
+
+									<hr class="major" />
+
+									<h2>Languages Covered</h2>
+									<p>The task covers <strong>21 languages</strong> across different cultural and geographical contexts:</p>
+									<p>German,
+										Spanish,
+										English,
+										Arabic,
+										Hausa,
+										Urdu,
+										Amharic,
+										Italian,
+										Russian,
+										Myanmar,
+										Chinese,
+										Nepalish,
+										Hindi,
+										Telugu,
+										Persian,
+										Turkish,
+										Bangladish,
+										Khmer,
+										Odia,
+										Punjabi,
+										Swahili.</p>
 
 									<hr class="major" />
 
@@ -196,41 +230,11 @@
 										<ul class="actions">
 											<li><a href="https://www.codabench.org/competitions/10674/" class="button big" target="_blank">Go to Subtask-3 Competition</a></li>
 										</ul>
-									<hr class="major" />
-
-									<h2>Languages Covered</h2>
-									<p>The task covers <strong>21 languages</strong> across different cultural and geographical contexts:</p>
-									<p>German,
-										Spanish,
-										English,
-										Arabic,
-										Hausa,
-										Urdu,
-										Amharic,
-										Italian,
-										Russian,
-										Myanmar,
-										Chinese,
-										Nepalish,
-										Hindi,
-										Telugu,
-										Persian,
-										Turkish,
-										Bangladish,
-										Khmer,
-										Odia,
-										Punjabi,
-										Swahili.</p>
-
-									<hr class="major" />
-
-									<h2>Dataset Information</h2>
-									<p>Data sources include news websites, Reddit, blogs, Bluesky, and regional forums, covering events such as elections, conflicts, gender rights, migration, and more. Each language contains 3,000–5,000 annotated instances.</p>
 									
-									<p><strong>Download Links:</strong></p>
-									<ul>
-										<li><a href="https://github.com/Polar-SemEval/trial-data" target="_blank">Trial Data Repository</a></li>
-									</ul>
+
+									<hr class="major" />
+
+
 
 								</section>
 
