--- a/tasks.html
+++ b/tasks.html
@@ -177,7 +177,8 @@
 
 									<h2>Subtask 3: Manifestation Identification</h2>
 									<p><strong>Multi-label classification</strong> to classify how polarization is expressed, with multiple possible labels including Stereotype, Vilification, Dehumanization, Extreme Language, Lack of Empathy", or Invalidation.</p>
-
+									<br>
+									<p><strong>Italian and Russian languages are not included in this subtask.</strong></p>
 									<div class="table-wrapper">
 										<table>
 											<thead>
