--- a/dates.html
+++ b/dates.html
@@ -44,11 +44,11 @@
 											<tbody>
 												<tr>
 													<td>Sample data ready</td>
-													<td>8 August 2025</td>
+													<td style="text-decoration: line-through;" >8 August 2025</td>
 												</tr>
 												<tr>
 													<td>Training data ready</td>
-													<td>10 September 2025</td>
+													<td style="text-decoration: line-through;">10 September 2025</td>
 												</tr>
 												<tr>
 													<td>Evaluation Start</td>
