--- a/dates.html
+++ b/dates.html
@@ -42,13 +42,13 @@
 												</tr>
 											</thead>
 											<tbody>
-												<tr>
+												<tr style="text-decoration: line-through;" >
 													<td>Sample data ready</td>
-													<td style="text-decoration: line-through;" >8 August 2025</td>
+													<td>8 August 2025</td>
 												</tr>
-												<tr>
+												<tr style="text-decoration: line-through;">
 													<td>Training data ready</td>
-													<td style="text-decoration: line-through;">10 September 2025</td>
+													<td>10 September 2025</td>
 												</tr>
 												<tr>
 													<td>Evaluation Start</td>
