--- a/participation.html
+++ b/participation.html
@@ -33,11 +33,11 @@
 
 									<h2>Participation Steps</h2>
 									<ol>
-										<li><strong>Register:</strong> Sign up on the CodaBench competition platform.</li>
-										<li><strong>Subtasks:</strong> Decide on the subtask(s) you want to participate in (Subtask 1, 2 and/or 3).</li>
-										<li><strong>Download:</strong> Access to the datasets for each subtask will be provided in this repository.</li>
+										<li><strong>Register:</strong> Sign up on the CodaBench competition platform, and join the competition.</li>
+										<li><strong>Subtasks:</strong> Choose the subtask(s) you want to participate in (Subtask 1, 2, 3, or all).</li>
+										<li><strong>Download:</strong> Go to the Files tab to download the dataset</li>
 										<li><strong>Develop:</strong> Build your models using the provided data.</li>
-										<li><strong>Submit:</strong> Submit your predictions on the CodaBench competition platform.</li>
+										<li><strong>Submit:</strong> Upload your predictions on the CodaBench competition platform</li>
 									</ol>
 
 									<hr class="major" />
