--- a/participation.html
+++ b/participation.html
@@ -35,7 +35,7 @@
 									<ol>
 										<li><strong>Register:</strong> Sign up on the CodaBench competition platform, and join the competition.</li>
 										<li><strong>Subtasks:</strong> Choose the subtask(s) you want to participate in (Subtask 1, 2, 3, or all).</li>
-										<li><strong>Download:</strong> Go to the Files tab to download the dataset, <a href="https://docs.google.com/document/d/1pffhec5teDvXrnfAg-OBJvXZ0B45--GQRfhoxeGfOyc/edit?tab=t.0" target="_blank">click here for a guide</a></li>
+										<li><strong>Download:</strong> Go to the Files tab to download the dataset, <a href="https://docs.google.com/document/d/1pffhec5teDvXrnfAg-OBJvXZ0B45--GQRfhoxeGfOyc/edit?tab=t.0" target="_blank">CLICK HERE FOR A GUIDE</a>.</li>
 										<li><strong>Develop:</strong> Build your models using the provided data.</li>
 										<li><strong>Submit:</strong> Upload your predictions on the CodaBench competition platform</li>
 									</ol>
