--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										<header>
 											<h1>POLAR @ SemEval-2026<br />
 											Task 9</h1>
-											<p style="font-size: 1.1rem; max-width: 700px; line-height: 1.6;">Detecting Multilingual, Multicultural and Multievent Online Polarization</p>
+											<p style="font-size: 1.1rem; max-width: 700px;">Detecting Multilingual, Multicultural and Multievent Online Polarization</p>
 										</header>
 										<p>Polarization is the sharp division of opinions into opposing groups, often with hostility and exclusion. This shared task seeks to advance understanding of how polarization appears in text across languages, cultures, and events. Participants will develop models to detect and interpret polarized content from contexts like elections, conflicts, protests, and debates.</p>
 										<ul class="actions actions-column">
