--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 										<header>
 											<h1>POLAR @ SemEval-2026<br />
 											Task 9</h1>
-											<p style="font-size: 1.1rem; max-width: 700px;">Detecting Multilingual, Multicultural and Multievent Online Polarization</p>
+											<p style="font-size: 1.1rem; max-width: 700px; line-height: 1.6;">Detecting Multilingual, Multicultural and Multievent Online Polarization</p>
 										</header>
-										<p>Polarization is the sharp division of opinions into opposing groups, often with hostility and exclusion. This shared task seeks to advance understanding of how polarization appears in text across languages, cultures, and events. Participants will develop models to detect and interpret polarized content from contexts like elections, conflicts, protests, and debates.</p>
+										<p style="font-size: 1.1rem; max-width: 700px; line-height: 1.6;">Polarization is the sharp division of opinions into opposing groups, often with hostility and exclusion. This shared task seeks to advance understanding of how polarization appears in text across languages, cultures, and events. Participants will develop models to detect and interpret polarized content from contexts like elections, conflicts, protests, and debates.</p>
 										<ul class="actions actions-column">
 											<li><a href="tasks.html" class="button big">To Know more about subtasks & trail data Click Here</a></li>
 											<!-- <li><a href="https://www.codabench.org/competitions/10522" class="button big" target="_blank">Codabench Subtask 1</a></li>
