--- a/index.html
+++ b/index.html
@@ -46,14 +46,18 @@
 										<header>
 											<h1>POLAR @ SemEval-2026<br />
 											Task 9</h1>
-											<p>Detecting Multilingual, Multicultural and Multievent Online Polarization</p>
+											<h3>Detecting Multilingual, Multicultural and Multievent Online Polarization</h3>
 										</header>
-										<p>Polarization is the sharp division of opinions into opposing groups, often with hostility and exclusion. This shared task seeks to advance understanding of how polarization appears in text across languages, cultures, and events. Participants will develop models to detect and interpret polarized content from contexts like elections, conflicts, protests, and debates.</p>
+										<h3>Task Introduction</h3>
+										<p>
+											Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
+											For the first time, we introduce a polarization task, aimed at detection of online polarization. The task focuses on the identification of multilingual, multicultural and multievent polarization, capturing the complexity of online discourse across diverse contexts. 
+											Participants may participate in one or more of the following three sub-tasks:  Polarization Detection, Polarization Type Classification and Polarization Manifestation Identification
+											Languages Covered 
+											The task covers the following 21 languages: German, Spanish, English, Arabic, Hausa, Urdu, Amharic, Italian, Russian, Myanmar, Chinese, Nepalish, Hindi, Telugu, Persian, Turkish, Bangladish, Khmer, Odia, Punjabi, Swahili, Polish.
+										</p>
 										<ul class="actions actions-column">
 											<li><a href="tasks.html" class="button big">To Know more about subtasks & trail data Click Here</a></li>
-											<!-- <li><a href="https://www.codabench.org/competitions/10522" class="button big" target="_blank">Codabench Subtask 1</a></li>
-											<li><a href="https://www.codabench.org/competitions/10669" class="button big" target="_blank">Codabench Subtask 2</a></li>
-											<li><a href="https://www.codabench.org/competitions/10674" class="button big" target="_blank">Codabench Subtask 3</a></li> -->
 										  </ul>
 										  
 									</div>
