--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 											The task covers the following 21 languages: German, Spanish, English, Arabic, Hausa, Urdu, Amharic, Italian, Russian, Myanmar, Chinese, Nepalish, Hindi, Telugu, Persian, Turkish, Bangladish, Khmer, Odia, Punjabi, Swahili, Polish.
 										</p>
 										<ul class="actions actions-column">
-											<li><a href="tasks.html" class="button big">To Know more about subtasks & trail data Click Here</a></li>
+											<li><a href="tasks.html" class="button big">To Know more about subtasks & trial data Click Here</a></li>
 										  </ul>
 										  
 									</div>
