--- a/tasks.html
+++ b/tasks.html
@@ -31,15 +31,19 @@
 										<h1>Subtasks</h1>
 									</header>
 
-									<p>Participants may choose to compete in one or more of the three subtasks.</p>
+									<p>Our task consists of three subtasks. Participants may choose to compete in one or more of the three subtasks. 
+									Each subtask is designed to address a specific aspect of polarization detection and analysis in multilingual social media content.
+
+									</p>
 
 									<h2>Dataset Information</h2>
 									<p>Data sources include news websites, Reddit, blogs, Bluesky, and regional forums, covering events such as elections, conflicts, gender rights, migration, and more. Each language contains 3,000–5,000 annotated instances.</p>
+									<p>A few sample instances are provided here for review, and additional trial data can be found at: <a href="https://github.com/Polar-SemEval/trial-data" target="_blank"><strong>TRIAL DATA</strong></a></p>
 									
-									<p><strong>Download Links:</strong></p>
+									<!-- <p><strong>Download Links:</strong></p>
 									<ul>
 										<li><a href="https://github.com/Polar-SemEval/trial-data" target="_blank">Trial Data Repository</a></li>
-									</ul>
+									</ul> -->
 
 									<hr class="major" />
 
