--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								</header>
 								<div class="features">
 									<article>
-										<span class="image object"><img src="assets/POLAR.png" alt="POLAR Task Banner" /></span>
+										<span class="image object"><img src="assets/POLAR.png" alt="POLAR Task Banner" style="width: 200px; height: 200px;"/></span>
 										<div class="content">
 											<h3>Task Introduction</h3>
 											<p>											Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
