--- a/index.html
+++ b/index.html
@@ -72,18 +72,16 @@
 									<h2>Detecting Multilingual, Multicultural and Multievent Online Polarization</h2>
 								</header>
 								<div class="features">
-
+									<article>
 										<span class="image object"><img src="assets/POLAR.png" alt="POLAR Task Banner" style="width: 200px; height: 200px;"/></span>
-										<div class="content">
 											<h3>Task Introduction</h3>
-											<p>											Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
+											<p>	Online polarization is the sharp division and hostility between social, political, or identity groups. Online polarization has become a growing concern, as it often precedes hate speech, offensive discourse, and social fragmentation. In its extreme form,  polarization can create a fragmented society where individuals or groups are unable to engage in constructive dialogue, leading to a breakdown in community cohesion and social unity. Thus, detecting and mitigating polarization before it escalates is crucial to ensure safer and more inclusive online spaces.
 												For the first time, we introduce a polarization task, aimed at detection of online polarization. The task focuses on the identification of multilingual, multicultural and multievent polarization, capturing the complexity of online discourse across diverse contexts. 
 												Participants may participate in one or more of the following three sub-tasks:  Polarization Detection, Polarization Type Classification and Polarization Manifestation Identification
 												Languages Covered 
 												The task covers the following 21 languages: German, Spanish, English, Arabic, Hausa, Urdu, Amharic, Italian, Russian, Myanmar, Chinese, Nepalish, Hindi, Telugu, Persian, Turkish, Bangladish, Khmer, Odia, Punjabi, Swahili, Polish.
 											</p>
-										</div>
-
+									</article>
 								</div>
 							</section>
 							<!--Test-->
