--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 										  </ul>
 										  
 									</div>
-									<span class="image object">
+									<span class="image">
 										<img src="assets/POLAR.png" alt="POLAR Task Banner" />
 									</span>
 								</section>
