--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
 										  </ul>
 										  
 									</div>
-									<span class="image">
+									<span class="image object">
 										<img src="assets/POLAR.png" alt="POLAR Task Banner" />
 									</span>
 								</section>
-							
 
 							<!-- Section -->
 								<section>
