--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 										  </ul>
 										  
 									</div>
-									<div class="image object">
+									<span class="image object">
 										<img src="assets/POLAR.png" alt="POLAR Task Banner" />
-									</div>
+									</span>
 								</section>
 
 							<!-- Section -->
