--- a/participation.html
+++ b/participation.html
@@ -51,6 +51,15 @@
 
 									<hr class="major" />
 
+									<!-- <h2>Starter Kit</h2>
+									<ul>
+										<li><strong>Subtask 1:</strong> Macro F1</li>
+										<li><strong>Subtask 2:</strong> Macro F1</li>
+										<li><strong>Subtask 3:</strong> Macro F1</li>
+									</ul>
+
+									<hr class="major" /> -->
+
 									<h2>Competition Rules and Terms</h2>
 
 									<h3>1. Consent to Public Release of Scores</h3>
