Update languages list in tasks.html

--- a/tasks.html
+++ b/tasks.html
@@ -49,27 +49,27 @@
 
 									<h2>Languages Covered</h2>
 									<p>The task covers <strong>21 languages</strong> across different cultural and geographical contexts:</p>
-									<p>German,
-										Spanish,
-										English,
+									<p>Amharic,
 										Arabic,
-										Hausa,
-										Urdu,
-										Amharic,
-										Italian,
-										Russian,
-										Myanmar,
+										Bengali,
+										Burmese,
 										Chinese,
-										Nepalish,
+										English,
+										German,
+										Hausa,
 										Hindi,
-										Telugu,
-										Persian,
-										Turkish,
-										Bangladish,
+										Italian,
 										Khmer,
+										Nepali,
 										Odia,
+										Persian,
 										Punjabi,
-										Swahili.</p>
+										Russian,
+										Spanish,
+										Swahili,
+										Telugu,
+										Turkish,
+										Urdu.</p>
 
 									<hr class="major" />
 
