--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 											For the first time, we introduce a polarization task, aimed at detection of online polarization. The task focuses on the identification of multilingual, multicultural and multievent polarization, capturing the complexity of online discourse across diverse contexts. 
 											Participants may participate in one or more of the following three sub-tasks:  Polarization Detection, Polarization Type Classification and Polarization Manifestation Identification
 											Languages Covered 
-											The task covers the following 21 languages: German, Spanish, English, Arabic, Hausa, Urdu, Amharic, Italian, Russian, Myanmar, Chinese, Nepalish, Hindi, Telugu, Persian, Turkish, Bangladish, Khmer, Odia, Punjabi, Swahili, Polish.
+											The task covers the following 21 languages: Amharic, Arabic, Bengali, Burmese, Chinese, English, German, Hausa, Hindi, Italian, Khmer, Nepali, Odia, Persian, Punjabi, Russian, Spanish, Swahili, Telugu, Turkish, and Urdu.
 										</p>
 										<ul class="actions actions-column">
 											<li><a href="tasks.html" class="button big">To Know more about subtasks & trial data Click Here</a></li>
