--- a/announcements/data-released-HGI.html
+++ b/announcements/data-released-HGI.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Data Released - POLAR @ SemEval-2026</title>
+		<title>New Data Released - POLAR @ SemEval-2026</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -19,7 +19,7 @@
 								<header id="header">
 									<a href="../" class="logo"><strong>POLAR</strong> @ SemEval-2026</a>
 									<ul class="icons">
-										<li><a href="https://discord.gg/K5uhEF2jPN" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+										<li><a href="https://discord.gg/XpJNRXWt" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 										<li><a href="https://groups.google.com/g/polarization-semeval-2026-participants" class="icon solid fa-envelope"><span class="label">Google Group</span></a></li>
 										<li><a href="https://github.com/Polar-SemEval/trial-data" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
@@ -29,18 +29,28 @@
 							<!--1-->
 								<section>
 									<header class="main">
-										<h1>Data Release Update - Subtasks 1, 2 & 3 Available in 6 Languages!</h1>
-										<p>Posted on September 20, 2025 at 18:00 UTC</p>
+										<h1>Data Release Update – Now Expanded to 9 Languages with German, Hausa & Italian!</h1>
+										<p>Posted on October 04, 2025 at 09:00 UTC</p>
 									</header>
 
-									<p>We have released the training and development datasets for six languages for Subtask-1, Subtask-2, and Subtask-3: Amharic (amh), Arabic (arb), Chinese (zho), English (eng), Spanish (spa), and Urdu (urd). More languages are on the way, and we’ll be updating the website with release information over the next few days.</p>
 									<p>
-										The competition websites for 
-										<a href="https://www.codabench.org/competitions/10522/" target="_blank" rel="noopener noreferrer">Subtask 1</a>, 
-										<a href="https://www.codabench.org/competitions/10669" target="_blank" rel="noopener noreferrer">Subtask 2</a>, 
-										and <a href="https://www.codabench.org/competitions/10674" target="_blank" rel="noopener noreferrer">Subtask 3</a> 
-										are now live. 
-									</p>									  
+										We are pleased to announce that three additional languages are now available:
+										German
+										Hausa
+										Italian (only participating in Subtask 1 and Subtask 2)
+										Nine languages are now available: Amharic (amh), Arabic (arb), English (eng), German (deu), Hausa (hau), Italian (ita), Spanish (spa), Urdu (urd), and Chinese (zho).
+
+									</p>
+
+									<p>
+										Join and participate in our three subtasks:
+									</p>
+                                    <ul>
+                                        <li><a href="https://www.codabench.org/competitions/10522/" target="_blank" rel="noopener noreferrer">Subtask 1</a></li>
+                                        <li><a href="https://www.codabench.org/competitions/10669" target="_blank" rel="noopener noreferrer">Subtask 2</a></li>
+                                        <li><a href="https://www.codabench.org/competitions/10674" target="_blank" rel="noopener noreferrer">Subtask 3</a></li>
+                                    </ul>
+                                    								  
 									  
 									<h2>Key Information for Participants</h2>
 
