--- a/announcements/data-released-HGI.html
+++ b/announcements/data-released-HGI.html
@@ -32,6 +32,7 @@
 										<h1>Data Release Update – Now Expanded to 9 Languages with German, Hausa & Italian!</h1>
 										<p>Posted on October 04, 2025 at 09:00 UTC</p>
 									</header>
+                                    <strong>
 
 									<p>
 										We are pleased to announce that three additional languages are now available:
@@ -50,7 +51,7 @@
                                         <li><a href="https://www.codabench.org/competitions/10669" target="_blank" rel="noopener noreferrer">Subtask 2</a></li>
                                         <li><a href="https://www.codabench.org/competitions/10674" target="_blank" rel="noopener noreferrer">Subtask 3</a></li>
                                     </ul>
-                                    								  
+                                </strong>							  
 									  
 									<h2>Key Information for Participants</h2>
 
